added comments to html/js of small changes i made...added event listener to letsGoBTn

--- a/Page2.html
+++ b/Page2.html
@@ -21,8 +21,9 @@
         </div>
     </nav>
 
-    <script src="./asset/script.js"></script>
+    
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
