Added some code to Page 2 html and Page 2 css

--- a/Page2.html
+++ b/Page2.html
@@ -7,7 +7,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
         type="text/css">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/css/Page2.css">
     <title>Project 1 Page 2</title>
 </head>
 
@@ -21,8 +21,33 @@
         </div>
     </nav>
 
-    <script src="./asset/script.js"></script>
+    <!-- Masthead -->
+    <header class="masthead text-white text-center">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-9 mx-auto">
+                    <h1 class="mb-5" style="color: white">Build a landing page for your business or project and generate more leads!</h1>
+                </div>
+                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+                    <form>
+                        <div class="form-row">
+                            <div class="col-12 col-md-9 mb-2 mb-md-0">
+                                <input type="email" class="form-control form-control-lg"
+                                    placeholder="Enter your email...">
+                            </div>
+                            <div class="col-12 col-md-3">
+                                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./asset/script.js"></script>
 </body>
 
 </html>
