--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="modal-body" style="padding:40px 50px;">
           <form role="form">
             <div class="form-group">
-              <label for="usrname"><span class="glyphicon glyphicon-user"></span> Type of food:</label>
+              <label for="usrname"><span><i class="icon-small icon-pizza"></i></span> Type of food:</label>
               <input type="text" class="form-control" id="usrname" placeholder="Type of Food">
             </div>
             <div class="form-group">
