fixed landing page, added image, updated style.css

--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="container">
 
-
-  <button type="button" class="btn btn-default btn-lg" id="myBtn">Start</button>
+  <div class="content">
+    <p>
+       <h1>What Do You Want To Do Tonight?</h1> 
+    </p>
+</div>
+  <button type="button" class="btn btn-default btn-lg" id="enterBtn">Enter!</button>
 
 
   <div class="modal fade" id="myModal" role="dialog">
@@ -45,6 +49,7 @@
     </div>
   </div> 
 </div>
+</body>
  
 <script src="assets/js/script.js">
 
