--- a/Page2.html
+++ b/Page2.html
@@ -116,17 +116,24 @@
                                     <h3 class="panel-title"> <a href="#" class="btn btn-primary">Let's Eat!</a></h3>
                                 </div>
                                 <div class="panel-body">
-                                    <div id="event-title" class="list-group">
+
+                                    <div id="food1" class="list-group">
                                         <a href="#" class="list-group-item">
                                             <h4 class="list-group-item-heading">Restaurant Name1</h4>
                                             <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                             <p class="venue"></p>
                                         </a>
+                                    </div>
+
+                                    <div id="food1" class="list-group">
                                         <a href="#" class="list-group-item">
                                             <h4 class="list-group-item-heading">Restaurant Name2</h4>
                                             <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                             <p class="venue"></p>
                                         </a>
+                                    </div>
+
+                                    <div id="food1" class="list-group">
                                         <a href="#" class="list-group-item">
                                             <h4 class="list-group-item-heading">Restaurant Name3</h4>
                                             <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -145,17 +152,23 @@
                                     <h3 class="panel-title"> <a href="#" class="btn btn-primary">Let's Do something</a></h3>
                                 </div>
                                 <div class="panel-body">
-                                    <div id="event-title" class="list-group">
+
+                                    <div id="event1" class="list-group">
                                         <a href="#" class="list-group-item">
                                             <h4 class="list-group-item-heading">Event title1</h4>
                                             <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                             <p class="venue"></p>
                                         </a>
+                                    </div>
+
+                                        <div id="event2" class="list-group">
                                         <a href="#" class="list-group-item">
                                             <h4 class="list-group-item-heading">Event title2</h4>
                                             <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                             <p class="venue"></p>
                                         </a>
+                                    </div>
+                                    <div id="event3" class="list-group">
                                         <a href="#" class="list-group-item">
                                             <h4 class="list-group-item-heading">Event title3</h4>
                                             <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
