Added docu javascript file

--- a/Page2.html
+++ b/Page2.html
@@ -111,12 +111,12 @@
                     <div class="col-md-5">
                         <div class="card mb-4 box-shadow">
                             <div style="width: 50rem;" border-style="1px solid black">
-                                <img class="card-img-top" src="./img/shanice-garcia-TO69trRWlrI-unsplash.jpg"
+                                <img class="card-img-top" id="restaurant-id" src="./img/shanice-garcia-TO69trRWlrI-unsplash.jpg"
                                     alt="Card image cap" width="386" height="280"
                                     style="vertical-align:middle;margin:50px 10px 10px 50px">
                                 <div class="card-body-1">
-                                    <h5 class="card-title">Restaurant Name</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                    <h5 id="restaurant-title" class="card-title">Restaurant Name</h5>
+                                    <p id="restaurant-text" class="card-text">Some quick example text to build on the card title and make up
                                         the
                                         bulk
                                         of
