--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     </div>
   </div>
 </body>
+<script src="assets/js/docu.js"></script>
 <script src="assets/js/script.js"></script>
 <script src="assets/js/page2.js"></script>
 </body>
