--- a/Page2.html
+++ b/Page2.html
@@ -156,7 +156,7 @@
                                     <div id="event1" class="list-group">
                                         <a href="#" class="list-group-item">
                                             <h4 class="list-group-item-heading">Event title1</h4>
-                                            <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                            <p id="event1Text" class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                             <p class="venue"></p>
                                         </a>
                                     </div>
@@ -164,14 +164,15 @@
                                         <div id="event2" class="list-group">
                                         <a href="#" class="list-group-item">
                                             <h4 class="list-group-item-heading">Event title2</h4>
-                                            <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                            <p id="event2Text" class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                             <p class="venue"></p>
                                         </a>
                                     </div>
                                     <div id="event3" class="list-group">
+                                        
                                         <a href="#" class="list-group-item">
                                             <h4 class="list-group-item-heading">Event title3</h4>
-                                            <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                            <p id="event3Text" class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                             <p class="venue"></p>
                                         </a>
                                     </div>
