added local storage to our app

--- a/Page2.html
+++ b/Page2.html
@@ -106,7 +106,7 @@
                             </div>
                         </div>
                     </div>
-
+                        <div id="previous-search-el"></div>
                     <!-- Fix and add more features to display the suggestion box -->
                     <div class="container">
                         <div class="row">
