--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 
     <div class="content">
       <p>
-        <h1>What Do You Want To Do Tonight?</h1>
+        <h1 contenteditable spellcheck="false">Explore Search Connect</h1>
+      </p>
+    </div>
+    <div class="subHeading">
+      <p>
+        <h3 contenteditable spellcheck="false">Find restaurants, bars, and events happening near you...</h3>
       </p>
     </div>
     <button type="button" class="btn btn-default btn-lg" id="enterBtn">Enter!</button>
@@ -52,6 +57,7 @@
       </div>
     </div>
   </div>
+  
 </body>
 <script src="assets/js/docu.js"></script>
 <script src="assets/js/script.js"></script>
