--- a/Page2.html
+++ b/Page2.html
@@ -18,18 +18,23 @@
         <!-- header, fix the positioning and alignment -->
         <header class="masthead text-white text-center">
             <div class="overlay"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-9 mx-auto">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-9 mx-auto">
                         <h1 class="mb-5" style="color: white">What Do You Want To Do?</h1>
                         <form id="event-search-form">
+                            
                             <div class="form-row">
                                 <div class="col-12 col-md-9 mb-2 mb-md-0">
                                     <input id="user-search" class="form-control form-control-lg" name="search-input" type="text" placeholder="Search">
                                 </div>
+
                                 <div class="col-12 col-md-3">
                                     <button id="submit-btn" style="color: blue" type="submit"
                                         class="btn btn-block btn-lg btn-primary">Search</button>
+                                </div>
+                             </div>
+                        </form>
                     </div>
                 </div>
             </div>
