fixed colors in css, modified heading and button

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -14,33 +14,16 @@
 
   <div class="container">
 
-    <div class="content">
-<<<<<<< HEAD
-      <p>
+      <div class="content">
         <h1 contenteditable spellcheck="false">Explore Search Connect</h1>
-      </p>
-    </div>
-    <div class="subHeading">
-      <p>
-        <h3 contenteditable spellcheck="false">Find restaurants, bars, and events happening near you...</h3>
-      </p>
-    </div>
-    <button type="button" class="btn btn-default btn-lg enterBtn" id="enterBtn">Enter!</button>
-
-
+      </div>
+      <div class="subHeading">
+        <h3 contenteditable spellcheck="false">Find Restaurants, Bars, and Events happening near you &#10154; </h3>
+      </div>
   </div>
 
-=======
-    
-        <h1>What Do You Want To Do Tonight?</h1>
-      
-    </div>
-    <button type="button" class="btn btn-default btn-lg enterBtn" id="enterBtn">Enter!</button>
+  <button type="button" class="btn btn-default btn-lg enterBtn" id="enterBtn">Get Started</button>
 
-
-  </div>
-
->>>>>>> 737af8ae01e055cc2b0364fdb95fba62f6a5a337
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
 
