--- a/Page2.html
+++ b/Page2.html
@@ -111,7 +111,9 @@
 
 
                         <div class="row">
+                            <!--Events-->
                             <div class="col-md-6">
+
                                 <div id="event-id" class="panel panel-primary">
                                     <div class="panel-heading">
                                         <h3 class="panel-title"> <a href="#" class="btn btn-primary">Let's Do
@@ -119,28 +121,34 @@
                                     </div>
                                     <div class="panel-body">
 
-                                        <div id="event1" class="list-group">
-                                            <a href="#" class="list-group-item">
-                                                <h4 class="list-group-item-heading"></h4>
+                                        <div id="events" class="list-group">
+
+                                            <div id="link1" class="list-group-item">
+                                                <h4 id="list-text1" class="list-group-item-heading"></h4>
                                                 <p id="event1Text" class="list-group-item-text"></p>
-                                                <p class="venue"></p>
-                                            </a>
+                                                <p id="venue1"></p>
+                                                <a href="" target=" " id="btn-link1"><button type="button" class="btn btn-secondary">Learn More & Book</button></a>
+                                            </div>
                                         </div>
 
-                                        <div id="event2" class="list-group">
-                                            <a href="#" class="list-group-item">
-                                                <h4 class="list-group-item-heading"></h4>
+                                        <div class="list-group">
+
+                                            <div id="link2" class="list-group-item">
+                                                <h4 id="list-text2" class="list-group-item-heading"></h4>
                                                 <p id="event2Text" class="list-group-item-text"></p>
-                                                <p class="venue"></p>
-                                            </a>
+                                                <p id="venue2"></p>
+                                                <a href="" target=" " id="btn-link1"><button type="button" class="btn btn-secondary">Learn More & Book</button></a>
+                                            </div>
                                         </div>
-                                        <div id="event3" class="list-group">
 
-                                            <a href="#" class="list-group-item">
-                                                <h4 class="list-group-item-heading"></h4>
+                                        <div class="list-group">
+
+                                            <div id="link3" class="list-group-item">
+                                                <h4 id="list-text3" class="list-group-item-heading"></h4>
                                                 <p id="event3Text" class="list-group-item-text"></p>
-                                                <p class="venue"></p>
-                                            </a>
+                                                <p id="venue3"></p>
+                                                <a href="" target=" " id="btn-link1"><button type="button" class="btn btn-secondary">Learn More & Book</button></a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
