just pushing my recent changes to up date page 2 js

--- a/Page2.html
+++ b/Page2.html
@@ -125,7 +125,7 @@
 
                                             <div id="link1" class="list-group-item">
                                                 <h4 id="list-text1" class="list-group-item-heading"></h4>
-                                                <p id="event1Text" class="list-group-item-text"></p>
+                                                <p id="eventText1" class="list-group-item-text"></p>
                                                 <p id="venue1"></p>
                                                 <a href="" target=" " id="btn-link1"><button type="button" class="btn btn-secondary">Learn More & Book</button></a>
                                             </div>
@@ -135,7 +135,7 @@
 
                                             <div id="link2" class="list-group-item">
                                                 <h4 id="list-text2" class="list-group-item-heading"></h4>
-                                                <p id="event2Text" class="list-group-item-text"></p>
+                                                <p id="eventText2" class="list-group-item-text"></p>
                                                 <p id="venue2"></p>
                                                 <a href="" target=" " id="btn-link1"><button type="button" class="btn btn-secondary">Learn More & Book</button></a>
                                             </div>
@@ -145,7 +145,7 @@
 
                                             <div id="link3" class="list-group-item">
                                                 <h4 id="list-text3" class="list-group-item-heading"></h4>
-                                                <p id="event3Text" class="list-group-item-text"></p>
+                                                <p id="eventText3" class="list-group-item-text"></p>
                                                 <p id="venue3"></p>
                                                 <a href="" target=" " id="btn-link1"><button type="button" class="btn btn-secondary">Learn More & Book</button></a>
                                             </div>
