removed old image, added new image to page 2 header and background, made minor changes on page 2 css

--- a/Page2.html
+++ b/Page2.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-9 mx-auto">
-                    <h1 class="mb-5" style="color: white">What Do You Want To Do?</h1>
+                    <h1 class="mb-5" style="color: rgb(88, 84, 84)">What Do You Want To Do?</h1>
                     <form id="event-search-form">
 
                         <div class="form-row">
@@ -78,7 +78,7 @@
                         <div class="col-md-6">
                             <div id="event-id" class="panel panel-primary">
                                 <div class="panel-heading">
-                                    <h3 class="panel-title"> <a href="#" class="btn btn-primary">Let's Eat!</a></h3>
+                                    <h3 class="panel-title">Let's Eat!</h3>
                                 </div>
                                 <div class="panel-body">
 
@@ -114,8 +114,7 @@
                             <div class="col-md-6">
                                 <div id="event-id" class="panel panel-primary">
                                     <div class="panel-heading">
-                                        <h3 class="panel-title"> <a href="#" class="btn btn-primary">Let's Do
-                                                something</a></h3>
+                                        <h3 class="panel-title"> Let's Do something</h3>       
                                     </div>
                                     <div class="panel-body">
 
