--- a/Page2.html
+++ b/Page2.html
@@ -48,16 +48,16 @@
                 <div class="form-group foodChoice">
                     <label for="foodChoice">Type of Food:</label>
                     <select class="form-control foodChoice" id="foodChoice">
-                        <option>Italian</option>
-                        <option>Chinese</option>
-                        <option>Pizza</option>
-                        <option>Greek</option>
-                        <option>Japanese</option>
-                        <option>Seafood</option>
-                        <option>Mexican</option>
-                        <option>Ice Cream</option>
-                        <option>Fast Food</option>
-                        <option>American</option>
+                        <option value="Italian">Italian</option>
+                        <option value="Chinese">Chinese</option>
+                        <option value="Pizza">Pizza</option>
+                        <option value="Greek">Greek</option>
+                        <option value="Japanese">Japanese</option>
+                        <option value="Seafood">Seafood</option>
+                        <option value="Mexican">Mexican</option>
+                        <option value="Ice Cream">Ice Cream</option>
+                        <option value="Fast Food">Fast Food</option>
+                        <option value="American">American</option>
                     </select>
                 </div>
                     <div class="form-group zipCode">
