trying to push my changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
 
       <div class="content">
-        <h1 contenteditable spellcheck="false">Explore Search Connect</h1>
+        <h1 contenteditable spellcheck="false">What Do You Want To Do?</h1>
       </div>
       <div class="subHeading">
         <h3 contenteditable spellcheck="false">Find Restaurants, Bars, and Events happening near you &#10154; </h3>
