--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <div class="container">
 
       <div class="content">
-        <h1 contenteditable spellcheck="false">What Do You Want To Do?</h1>
+        <h1>What Do You Want To Do?</h1>
       </div>
       <div class="subHeading">
-        <h3 contenteditable spellcheck="false">Find Restaurants, Bars, and Events happening near you &#10154; </h3>
+        <h3 >Find Restaurants, Bars, and Events happening near you &#10154; </h3>
         <button type="button" class="btn btn-default btn-lg enterBtn" id="enterBtn">Get Started</button>
 
       </div>
