--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
               
             </div>
             <div class="form-group">
-              <label for="psw"> <i class="icon-small icon-pizza"></i>></span> Zip Code:</label>
-              <input type="text" class="form-control" id="zipCode" placeholder="Zip Code">
+              <label for="psw"> <i class="icon-small icon-pizza"></i></span> Zip Code:</label>
+              <input type="text" class="form-control" id="zipCode" maxlength="5" placeholder="Zip Code">
             </div>
 
             <button type="submit" id="letsGoBtn" class="btn btn-success btn-block"><span
