pushing latest changes - dynamically creating and appending event elements to DOM

--- a/Page2.html
+++ b/Page2.html
@@ -21,20 +21,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-9 mx-auto">
-                    <h1 class="mb-5" style="color: rgb(88, 84, 84)">What Do You Want To Do?</h1>
-                    <form id="event-search-form">
-
-                        <div class="form-row">
-                            <div class="col-12 col-md-9 mb-2 mb-md-0">
-                                <input id="user-search" class="form-control form-control-lg" name="search-input"
-                                    type="text" placeholder="Search">
-                            </div>
-
-                            <div class="col-12 col-md-3">
-                                <button id="submit-btn" style="color: blue" type="submit"
-                                    class="btn btn-block btn-lg btn-primary">Search</button>
-                            </div>
-                        </div>
+                    <h1 class="mb-5" style="color: white">What Do You Want To Do?</h1>
+                   
                     </form>
                 </div>
             </div>
@@ -102,7 +90,7 @@
                         <div class="col-md-6">
                             <div id="event-id" class="panel panel-primary">
                                 <div class="panel-heading">
-                                    <h3 class="panel-title">Let's Eat!</h3>
+                                    <h3 class="panel-title"> <a href="#" class="btn btn-primary">Let's Eat!</a></h3>
                                 </div>
                                 <div class="panel-body">
 
@@ -140,12 +128,13 @@
 
                                 <div id="event-id" class="panel panel-primary">
                                     <div class="panel-heading">
-                                        <h3 class="panel-title"> Let's Do something</h3>       
+                                        <h3 class="panel-title"> <a href="#" class="btn btn-primary">Let's Do
+                                                something</a></h3>
                                     </div>
                                     <!-- put id on panel body-->
-                                    <div class="panel-body">
+                                    <div id="events" class="panel-body">
 
-                                        <div id="events" class="list-group">
+                                        <!-- <div id="events" class="list-group">
 
                                             <div id="link1" class="list-group-item">
                                                 <h4 id="list-text1" class="list-group-item-heading"></h4>
@@ -173,7 +162,8 @@
                                                 <p id="venue3"></p>
                                                 <a href="" target=" " id="btn-link1"><button type="button" class="btn btn-secondary">Learn More & Book</button></a>
                                             </div>
-                                        </div>
+                                        </div> -->
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -187,8 +177,8 @@
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="assets/js/docu.js"></script>
 <script src="assets/js/page2.js"></script>
+<script src="assets/js/docu.js"></script>
 <script src="assets/js/script.js"></script>
 
 </html>
