--- a/Page2.html
+++ b/Page2.html
@@ -56,14 +56,15 @@
                         <option value="Seafood">Seafood</option>
                         <option value="Mexican">Mexican</option>
                         <option value="Ice Cream">Ice Cream</option>
-                        <option value="Fast Food">Fast Food</option>
                         <option value="American">American</option>
+                        <option value="Indian">Indian</option>
+                        <option value="Thai">Thai</option>
                     </select>
                 </div>
-                    <div class="form-group zipCode">
-                        <label for="zipCodeInput">Zip Code:</label>
-                        <input type="text" class="form-control" id="zipCodeInput" maxlength="5" placeholder="Zip Code">
-                    </div>
+                <div class="form-group zipCode">
+                    <label for="zipCodeInput">Zip Code:</label>
+                    <input type="text" class="form-control" id="zipCodeInput" maxlength="5" placeholder="Zip Code">
+                </div>
             </form>
             <div class="previousSearch" id="previous-search-el"></div>
         </div>
@@ -80,36 +81,9 @@
                                 <div class="panel-heading">
                                     <h3 class="panel-title"> <a href="#" class="btn btn-primary">Let's Eat!</a></h3>
                                 </div>
-                                <div class="panel-body">
-
-                                    <div id="food1" class="list-group">
-                                        <a href="#" class="list-group-item">
-                                            <h4 id="restaurant-title1" class="list-group-item-heading"></h4>
-                                            <p id="restaurant-address1" class="list-group-item-text"></p>
-                                            <p id="restaurant-phone1" class="list-group-item-text"></p>
-                                        </a>
-                                    </div>
-
-                                    <div id="food1" class="list-group">
-                                        <a href="#" class="list-group-item">
-                                            <h4 id="restaurant-title2" class="list-group-item-heading"></h4>
-                                            <p id="restaurant-address2" class="list-group-item-text"></p>
-                                            <p id="restaurant-phone2" class="list-group-item-text"></p>
-                                        </a>
-                                    </div>
-
-                                    <div id="food1" class="list-group">
-                                        <a href="#" class="list-group-item">
-                                            <h4 id="restaurant-title3" class="list-group-item-heading"></h4>
-                                            <p id="restaurant-address3" class="list-group-item-text"></p>
-                                            <p id="restaurant-phone3" class="list-group-item-text"></p>
-                                        </a>
-                                    </div>
-                                </div>
+                                <div id="food-container" class="panel-body"></div>
                             </div>
                         </div>
-
-
                         <div class="row">
                             <!--Events-->
                             <div class="col-md-6">
@@ -127,7 +101,8 @@
                                                 <h4 id="list-text1" class="list-group-item-heading"></h4>
                                                 <p id="event1Text" class="list-group-item-text"></p>
                                                 <p id="venue1"></p>
-                                                <a href="" target=" " id="btn-link1"><button type="button" class="btn btn-secondary">Learn More & Book</button></a>
+                                                <a href="" target=" " id="btn-link1"><button type="button"
+                                                        class="btn btn-secondary">Learn More & Book</button></a>
                                             </div>
                                         </div>
 
@@ -137,7 +112,8 @@
                                                 <h4 id="list-text2" class="list-group-item-heading"></h4>
                                                 <p id="event2Text" class="list-group-item-text"></p>
                                                 <p id="venue2"></p>
-                                                <a href="" target=" " id="btn-link1"><button type="button" class="btn btn-secondary">Learn More & Book</button></a>
+                                                <a href="" target=" " id="btn-link1"><button type="button"
+                                                        class="btn btn-secondary">Learn More & Book</button></a>
                                             </div>
                                         </div>
 
@@ -147,7 +123,8 @@
                                                 <h4 id="list-text3" class="list-group-item-heading"></h4>
                                                 <p id="event3Text" class="list-group-item-text"></p>
                                                 <p id="venue3"></p>
-                                                <a href="" target=" " id="btn-link1"><button type="button" class="btn btn-secondary">Learn More & Book</button></a>
+                                                <a href="" target=" " id="btn-link1"><button type="button"
+                                                        class="btn btn-secondary">Learn More & Book</button></a>
                                             </div>
                                         </div>
                                     </div>
