--- a/Page2.html
+++ b/Page2.html
@@ -12,32 +12,12 @@
 </head>
 
 <body>
-
-
-
     <!-- header, fix the positioning and alignment -->
     <header class="masthead text-white text-center">
         <div class="overlay"></div>
         <div class="container">
-            <div class="row">
-                <div class="col-xl-9 mx-auto">
-                    <h1 class="mb-5" style="color: white">What Do You Want To Do?</h1>
-                    <form id="event-search-form">
 
-                        <div class="form-row">
-                            <div class="col-12 col-md-9 mb-2 mb-md-0">
-                                <input id="user-search" class="form-control form-control-lg" name="search-input"
-                                    type="text" placeholder="Search">
-                            </div>
-
-                            <div class="col-12 col-md-3">
-                                <button id="submit-btn" style="color: blue" type="submit"
-                                    class="btn btn-block btn-lg btn-primary">Search</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
+        </div>
         </div>
     </header>
 
@@ -45,6 +25,16 @@
     <div id="wrap" class="mainContent">
         <div class="container searchContent">
             <form class="userInput">
+                <div class="form-row" style="display: inline;">
+                    <div class="col-12 col-md-9 mb-2 mb-md-0 citySearch">
+                        <label for="foodChoice">Search By City:</label>
+                        <input id="user-search" class="form-control form-control-lg" name="search-input" type="text"
+                            placeholder="Search">
+                        <label for="foodChoice">Zipcode:</label>
+                        <input id="user-search" class="form-control form-control-lg" name="postal-input" type="text"
+                            placeholder="Search">
+                    </div>
+                </div>
                 <div class="form-group foodChoice">
                     <label for="foodChoice">Type of Food:</label>
                     <select class="form-control foodChoice" id="foodChoice">
@@ -61,23 +51,17 @@
                         <option value="Thai">Thai</option>
                     </select>
                 </div>
-                <div class="form-group zipCode">
-                    <label for="zipCodeInput">Zip Code:</label>
-                    <input type="text" class="form-control" id="zipCodeInput" maxlength="5" placeholder="Zip Code">
-                </div>
             </form>
+            <button id="submit-btn" type="submit" class="btn btn-block btn-lg btn-primary searchBtn">Search</button>
             <div class="previousSearch" id="previous-search-el"></div>
         </div>
-
         <div id="main" class="container">
             <div class="row">
-
-
                 <!-- Fix and add more features to display the suggestion box -->
                 <div class="container">
                     <div class="row contentContainer">
                         <div class="col-md-6">
-                            <div id="event-id" class="panel panel-primary">
+                            <div id="event-id" class="panel">
                                 <div class="panel-heading">
                                     <h3 class="panel-title"> <a href="#" class="btn btn-primary">Let's Eat!</a></h3>
                                 </div>
@@ -87,46 +71,13 @@
                         <div class="row">
                             <!--Events-->
                             <div class="col-md-6">
-
-                                <div id="event-id" class="panel panel-primary">
+                                <div id="event-id" class="panel">
                                     <div class="panel-heading">
                                         <h3 class="panel-title"> <a href="#" class="btn btn-primary">Let's Do
                                                 something</a></h3>
                                     </div>
-                                    <div class="panel-body">
-
-                                        <div id="events" class="list-group">
-
-                                            <div id="link1" class="list-group-item">
-                                                <h4 id="list-text1" class="list-group-item-heading"></h4>
-                                                <p id="event1Text" class="list-group-item-text"></p>
-                                                <p id="venue1"></p>
-                                                <a href="" target=" " id="btn-link1"><button type="button"
-                                                        class="btn btn-secondary">Learn More & Book</button></a>
-                                            </div>
-                                        </div>
-
-                                        <div class="list-group">
-
-                                            <div id="link2" class="list-group-item">
-                                                <h4 id="list-text2" class="list-group-item-heading"></h4>
-                                                <p id="event2Text" class="list-group-item-text"></p>
-                                                <p id="venue2"></p>
-                                                <a href="" target=" " id="btn-link1"><button type="button"
-                                                        class="btn btn-secondary">Learn More & Book</button></a>
-                                            </div>
-                                        </div>
-
-                                        <div class="list-group">
-
-                                            <div id="link3" class="list-group-item">
-                                                <h4 id="list-text3" class="list-group-item-heading"></h4>
-                                                <p id="event3Text" class="list-group-item-text"></p>
-                                                <p id="venue3"></p>
-                                                <a href="" target=" " id="btn-link1"><button type="button"
-                                                        class="btn btn-secondary">Learn More & Book</button></a>
-                                            </div>
-                                        </div>
+                                    <!-- put id on panel body-->
+                                    <div id="events" class="panel-body">
                                     </div>
                                 </div>
                             </div>
@@ -134,14 +85,12 @@
                     </div>
                 </div>
             </div>
-
-
             <!-- fix footer positioning -->
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="assets/js/docu.js"></script>
 <script src="assets/js/page2.js"></script>
+<script src="assets/js/docu.js"></script>
 <script src="assets/js/script.js"></script>
 
 </html>
