--- a/Page2.html
+++ b/Page2.html
@@ -57,7 +57,7 @@
                         <div class="col-md-6">
                             <div id="event-id" class="panel">
                                 <div class="panel-heading">
-                                    <h3 class="panel-title"> <a href="#" class="btn btn-primary">Let's Eat!</a></h3>
+                                    <h3 class="panel-title">Let's Eat!</a></h3>
                                 </div>
                                 <div id="food-container" class="panel-body"></div>
                             </div>
@@ -67,7 +67,7 @@
                             <div class="col-md-6">
                                 <div id="event-id" class="panel">
                                     <div class="panel-heading">
-                                        <h3 class="panel-title"> <a href="#" class="btn btn-primary">Let's Do Something!</a></h3>
+                                        <h3 class="panel-title">Let's Do Something!</a></h3>
                                     </div>
                                     <!-- put id on panel body-->
                                     <div id="events" class="panel-body"></div>
