added info to read me page

--- a/Page2.html
+++ b/Page2.html
@@ -27,7 +27,7 @@
                         <input id="user-search" class="form-control form-control-lg" name="search-input" type="text"
                             placeholder="Search">
                         <label for="foodChoice">Zipcode:</label>
-                        <input type="text" class="form-control" id="zipCodeInput" maxlength="5" placeholder="Zip Code">
+                        <input type="text" class="form-control" id="zipCodeInput" maxlength="5" placeholder="Zip Code" required>
                     </div>
                 </div>
                 <div class="form-group foodChoice">
