minor food selection addition and title changes

--- a/Page2.html
+++ b/Page2.html
@@ -23,7 +23,7 @@
             <form class="userInput">
                 <div class="form-row" style="display: inline;">
                     <div class="col-12 col-md-9 mb-2 mb-md-0 citySearch">
-                        <label for="foodChoice">Search By City:</label>
+                        <label for="foodChoice">Search By Keywords:</label>
                         <input id="user-search" class="form-control form-control-lg" name="search-input" type="text"
                             placeholder="Search">
                         <label for="foodChoice">Zipcode:</label>
@@ -41,8 +41,9 @@
                         <option value="Seafood">Seafood</option>
                         <option value="Mexican">Mexican</option>
                         <option value="Ice Cream">Ice Cream</option>
-                        <option value="Fast Food">Fast Food</option>
                         <option value="American">American</option>
+                        <option value="Indian">Indian</option>
+                        <option value="Thai">Thai</option>
                     </select>
                 </div>
             </form>
@@ -57,7 +58,7 @@
                         <div class="col-md-6">
                             <div id="event-id" class="panel">
                                 <div class="panel-heading">
-                                    <h3 class="panel-title"> <a href="#" class="btn btn-primary">Let's Eat!</a></h3>
+                                    <h3 class="panel-title">Let's Eat!</a></h3>
                                 </div>
                                 <div id="food-container" class="panel-body"></div>
                             </div>
@@ -67,7 +68,7 @@
                             <div class="col-md-6">
                                 <div id="event-id" class="panel">
                                     <div class="panel-heading">
-                                        <h3 class="panel-title"> <a href="#" class="btn btn-primary">Let's Do Something!</a></h3>
+                                        <h3 class="panel-title">Let's Do Something!</a></h3>
                                     </div>
                                     <!-- put id on panel body-->
                                     <div id="events" class="panel-body"></div>
