another minor addition

--- a/index.html
+++ b/index.html
@@ -42,16 +42,17 @@
               <div class="form-group foodChoice1">
                 <label for="usrname"><span><i class="icon-small icon-pizza"></i></span> Type of food:</label>
                 <select class="form-control foodChoice" id="foodChoice1">
-                    <option value="Italian">Italian</option>
-                    <option value="Chinese">Chinese</option>
-                    <option value="Pizza">Pizza</option>
-                    <option value="Greek">Greek</option>
-                    <option value="Japanese">Japanese</option>
-                    <option value="Seafood">Seafood</option>
-                    <option value="Mexican">Mexican</option>
-                    <option value="Ice Cream">Ice Cream</option>
-                    <option value="Fast Food">Fast Food</option>
-                    <option value="American">American</option>
+                  <option value="Italian">Italian</option>
+                  <option value="Chinese">Chinese</option>
+                  <option value="Pizza">Pizza</option>
+                  <option value="Greek">Greek</option>
+                  <option value="Japanese">Japanese</option>
+                  <option value="Seafood">Seafood</option>
+                  <option value="Mexican">Mexican</option>
+                  <option value="Ice Cream">Ice Cream</option>
+                  <option value="American">American</option>
+                  <option value="Indian">Indian</option>
+                  <option value="Thai">Thai</option>
                 </select>
             </div>
               
