added median queries for page 1 and 2

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
       <div class="modal-content rounded-0">
         <div class="modal-header rounded-0" style="padding:35px 50px;">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4> What Do You Want to Do?</h4>
+                 
+          <p>Enter Zip Code & Type of Food</p>  
+          <p>We Take Care</p>
+          <p>of The Rest!!</p>
         </div>
         <div class="modal-body" style="padding:40px 50px;">
           <!--ben changed the form name-->
