--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
   </div>
   
 </body>
-
+<script src="assets/js/docu.js"></script>
 <script src="assets/js/page2.js"></script>
+
 </body>
 
 </html>
