altered food choice options

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
       <div class="modal-content rounded-0">
         <div class="modal-header rounded-0" style="padding:35px 50px;">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-                 
           <p>Enter Zip Code & Type of Food</p>  
           <p>We Take Care</p>
           <p>of The Rest!!</p>
@@ -48,15 +47,14 @@
                 <select class="form-control foodChoice" id="foodChoice1">
                   <option value="Italian">Italian</option>
                   <option value="Chinese">Chinese</option>
-                  <option value="Pizza">Pizza</option>
-                  <option value="Greek">Greek</option>
+                  <option value="Spanish">Spanish</option>
+                  <option value="Vegetarian">Vegetarian</option>
                   <option value="Japanese">Japanese</option>
                   <option value="Seafood">Seafood</option>
                   <option value="Mexican">Mexican</option>
-                  <option value="Ice Cream">Ice Cream</option>
                   <option value="American">American</option>
-                  <option value="Indian">Indian</option>
-                  <option value="Thai">Thai</option>
+                  <option value="Seafood">Seafood</option>
+                  <option value="Desserts">Desserts</option>
                 </select>
             </div>
               
